feature: clean up code