@@ -1,6 +1,5 @@
 package com.cgp.taskboard.api;
 
-import com.cgp.taskboard.api.http.DocsHandler;
 import com.cgp.taskboard.api.task.TaskHandler;
 import com.cgp.taskboard.api.task.TaskService;
 import com.sun.net.httpserver.HttpServer;
@@ -9,26 +8,27 @@ import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.util.concurrent.Executors;
 
+/**
+ * Application entry point.
+ *
+ * <p>Starts a {@link HttpServer} on the port defined by the {@code PORT} environment variable,
+ * defaulting to {@code 8080}.
+ */
 public class TaskboardApiApplication {
+
     public static void main(String[] args) {
         int port = resolvePort();
         try {
-            HttpServer server = HttpServer.create(new InetSocketAddress(port), 0);
-            TaskService taskService = new TaskService();
+            final HttpServer server = HttpServer.create(new InetSocketAddress(port), 0);
+            final TaskService taskService = new TaskService();
 
             server.createContext("/api/v1/tasks", new TaskHandler(taskService));
-            server.createContext("/openapi.yaml", new DocsHandler.OpenApiHandler());
-            server.createContext("/docs", new DocsHandler.HtmlDocsHandler());
-            server.createContext("/", new DocsHandler.RootHandler());
-
-            server.setExecutor(Executors.newCachedThreadPool());
+            server.setExecutor(Executors.newVirtualThreadPerTaskExecutor());
             server.start();
 
-            System.out.println("Taskboard API started on http://localhost:" + port);
-            System.out.println("Docs: http://localhost:" + port + "/docs");
-            System.out.println("OpenAPI: http://localhost:" + port + "/openapi.yaml");
+            System.out.println("Taskboard API started on http://localhost:" + port); // TODO: replace by log
         } catch (IOException e) {
-            throw new RuntimeException("Failed to start server", e);
+            throw new RuntimeException("Failed to start server", e); // TODO: add custom exception
         }
     }
 
